Fix missing font files (text shifting) and empty button-roll selector.
- fonts.css: point @font-face at existing files (TheBasics-Mono, TheBasics-DisplayThin)
  and map Ratzif22 Black/Light/SemiBold/Thin to existing weights, removing 404s that
  caused fallback fonts and shifted text.
- button-roll.js: guard the empty ROLL_SELECTOR so querySelectorAll('') no longer throws
  and abort the rest of button enhancement.

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -83,7 +83,7 @@
 
 @font-face {
   font-family: "TheBasics Mono";
-  src: url("../fonts/TheBasicsMono-Regular.otf") format("opentype");
+  src: url("../fonts/TheBasics-Mono.otf") format("opentype");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -91,7 +91,7 @@
 
 @font-face {
   font-family: "TheBasics Display Thin";
-  src: url("../fonts/TheBasicsDisplay-Thin.otf") format("opentype");
+  src: url("../fonts/TheBasics-DisplayThin.otf") format("opentype");
   font-weight: 100;
   font-style: normal;
   font-display: swap;
@@ -115,7 +115,7 @@
 
 @font-face {
   font-family: "Ratzif22";
-  src: url("../fonts/Ratzif22-Black.otf") format("opentype");
+  src: url("../fonts/Ratzif22-Bold.otf") format("opentype");
   font-weight: 900;
   font-style: normal;
   font-display: swap;
@@ -123,7 +123,7 @@
 
 @font-face {
   font-family: "Ratzif22";
-  src: url("../fonts/Ratzif22-Light.otf") format("opentype");
+  src: url("../fonts/Ratzif22-Regular.otf") format("opentype");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -139,7 +139,7 @@
 
 @font-face {
   font-family: "Ratzif22";
-  src: url("../fonts/Ratzif22-SemiBold.otf") format("opentype");
+  src: url("../fonts/Ratzif22-Medium.otf") format("opentype");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -147,7 +147,7 @@
 
 @font-face {
   font-family: "Ratzif22";
-  src: url("../fonts/Ratzif22-Thin.otf") format("opentype");
+  src: url("../fonts/Ratzif22-Regular.otf") format("opentype");
   font-weight: 100;
   font-style: normal;
   font-display: swap;
